# steering

./: BENCHMARK_EVALUATION.md  PROJECT_SUMMARY_20251226.md  RESEARCH_NOTES.md  analyze_capability_results.py  analyze_confounders.py  analyze_steering_results.py  claude.md  compute_logit_diff.py  compute_logit_diff_all.py  compute_logit_diff_v2.py  confounder_analysis_v2.py  create_power_seeking_dataset.py  effect_evaluator.py  evaluate_all_benchmarks.py  evaluate_benchmarks.py  evaluate_new_gsm8k.py  evaluate_sycophancy.py  extract_concept_vector.py  find_optimal_layer.py  generate_on_benchmarks.py  main.py  pyproject.toml  rerun_gsm8k.py  run_all_models.py  run_benchmark_experiment.py  run_eval_experiment.py  run_full_experiment.py  run_layer_search_detailed.py  setup_anthropic_eval.py  setup_capability_benchmarks.py  setup_consciousness_eval.py  setup_lambda.sh  setup_open_ended_prompts.py  setup_sycophancy_experiment.py  test-steering.ipynb  test.ipynb
data/: contrastive_pairs.json  open_ended_prompts.json
docs/: distributed_inference.md  qwen3_moe_tensor_parallelism.md
notebooks/: 20241230_sycophancy_steering_analysis.ipynb  20251229_corrigibility_steering_analysis.ipynb  20251231_self_awareness_steering_analysis.ipynb  20260107_logit_diff_sweep_analysis.ipynb  20260112_generation_vs_logit_comparison.ipynb  20260115_key_figures.ipynb  20260116_validity_rate_analysis.ipynb  analyze_results.ipynb  analyze_results_20251221.ipynb  confounder_analysis.ipynb  confounder_analysis_v2.ipynb  confounder_analysis_v2_full.ipynb  test_steering.ipynb
src/: __init__.py  (+2 more)
(+1809 files in other folders)
